clusters/homelab/applications/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "authx.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: authelia-https
  hostnames:
  - "authx.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authelia
      port: 80
